package simulator.model;

public interface IComponentAction {
	String getName();
}
