package simulator.model;

import java.util.*;

/**
 * 
 */
public class SimulationResult {

    /**
     * Default constructor
     */
    public SimulationResult() {
    }


}